create github pages

--- a/About_us.html
+++ b/About_us.html
@@ -56,7 +56,7 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Contact-us.html">Contacts</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://mobiri.se">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="Contact-us.html">
                         Donate&nbsp;</a></div>
             </div>
         </div>
@@ -81,11 +81,9 @@
                             <strong>Jagrukta Abhiyan</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-4">
                             All sites you create with the Mobirise web builder are mobile-friendly natively. No special actions required. You can preview your site inside the app. Check the icons on the top.</p>
-                        <div class="mbr-section-btn mt-3">
-                            <a class="btn btn-primary display-4" href="https://mobiri.se">
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html">
                                 Learn more
-                            </a>
-                        </div>
+                            </a></div>
                     </div>
                 </div>
             </div>
@@ -108,9 +106,7 @@
                         </h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">
                             Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.</p>
-                        <div class="mbr-section-btn mt-3">
-                            <a class="btn btn-warning display-4" href="https://mobiri.se">Learn more</a>
-                        </div>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="index.html">Learn more</a></div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-5">
@@ -195,7 +191,7 @@
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Mobirise is an easy website builder. Just
                             drop site elements to your page, add content and style it to look the way you like.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                    <div class="mbr-section-btn item-footer mt-2"><a href="index.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
                 </div>
             </div>
@@ -210,7 +206,7 @@
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">You don't have to code to create your own
                             site. Select one of available themes in the Mobirise Site Maker.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                    <div class="mbr-section-btn item-footer mt-2"><a href="index.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
                 </div>
             </div>
@@ -260,17 +256,17 @@
                 </h5>
                 <div class="social-row display-7">
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://twitter.com/RMSS" target="_blank">
                             <span class="mbr-iconfont socicon-facebook socicon" style="color: rgb(78, 131, 254); fill: rgb(78, 131, 254);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://twitter.com/rmss" target="_blank">
                             <span class="mbr-iconfont socicon-twitter socicon" style="color: rgb(71, 181, 237); fill: rgb(71, 181, 237);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://twitter.com/rmss" target="_blank">
                             <span class="mbr-iconfont socicon-instagram socicon" style="color: rgb(219, 63, 158); fill: rgb(219, 63, 158);"></span>
                         </a>
                     </div>
@@ -304,7 +300,7 @@
             
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This page</a> was created with Mobirise template</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/w" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Create a <a href="https://mobirise.site/y" style="color:#aaa;">website</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
