--- a/Contact-us.html
+++ b/Contact-us.html
@@ -57,7 +57,7 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Contact-us.html">Contacts</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://mobiri.se">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="Contact-us.html">
                         Donate&nbsp;</a></div>
             </div>
         </div>
@@ -153,7 +153,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ay+58S7yi8KEpal9lqOhU4ujhJkUxDKXpux5UpwUpoQvUvvCEKXck/9mc8P2SUHvUtuZPwialMxVA7kH2FMLkgD3o4twcAEVC1fIsJXj46o2UKmsBJQgFP62adWE4QuK">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="hpAxB756Yn0ng8mmG/rd1bmC6s6BVE3xRGw7XfK7khtpf3d6jgZuh4MjlUZQ7sBetC0audlQl7hOTCc6kBNJbUE8hFwTD0weH96BKeDSIjjzeFZ+d1yfcjWN7tqlNW+x">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
@@ -173,9 +173,7 @@
                         <div class="col-12 form-group mb-3" data-for="textarea">
                             <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" id="textarea-form5-1c"></textarea>
                         </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn">
-                            <button type="submit" class="btn btn-primary display-4">Send message</button>
-                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary display-4">Send message</button></div>
                     </div>
                 </form>
             </div>
@@ -220,17 +218,17 @@
                 </h5>
                 <div class="social-row display-7">
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://twitter.com/RMSS" target="_blank">
                             <span class="mbr-iconfont socicon-facebook socicon" style="color: rgb(78, 131, 254); fill: rgb(78, 131, 254);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://twitter.com/rmss" target="_blank">
                             <span class="mbr-iconfont socicon-twitter socicon" style="color: rgb(71, 181, 237); fill: rgb(71, 181, 237);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://twitter.com/rmss" target="_blank">
                             <span class="mbr-iconfont socicon-instagram socicon" style="color: rgb(219, 63, 158); fill: rgb(219, 63, 158);"></span>
                         </a>
                     </div>
@@ -264,7 +262,7 @@
             
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/d" style="color:#aaa;">The site</a> was started with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">https://mobirise.com</a> easy website software</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
