--- a/Get_involved.html
+++ b/Get_involved.html
@@ -56,7 +56,7 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Contact-us.html">Contacts</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://mobiri.se">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="Contact-us.html">
                         Donate&nbsp;</a></div>
             </div>
         </div>
@@ -133,17 +133,17 @@
                 </h5>
                 <div class="social-row display-7">
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://twitter.com/RMSS" target="_blank">
                             <span class="mbr-iconfont socicon-facebook socicon" style="color: rgb(78, 131, 254); fill: rgb(78, 131, 254);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://twitter.com/rmss" target="_blank">
                             <span class="mbr-iconfont socicon-twitter socicon" style="color: rgb(71, 181, 237); fill: rgb(71, 181, 237);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://twitter.com/rmss" target="_blank">
                             <span class="mbr-iconfont socicon-instagram socicon" style="color: rgb(219, 63, 158); fill: rgb(219, 63, 158);"></span>
                         </a>
                     </div>
@@ -177,7 +177,7 @@
             
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/d" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Develop a free website with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web creator - <a href="https://mobirise.site/p" style="color:#aaa;">Details here</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
